fix header overlap

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -7,16 +7,18 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   -webkit-text-size-adjust: 100%
+  -webkit-tap-highlight-color: transparent
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
   --page-margin-2xl: 50px
   --page-margin-xl: 40px
   --page-margin-lg: 30px
   --page-margin-md: 25px
   --page-margin-sm: 15px
   --h2-font-lg: 19.5px
-
-.box
-  padding-bottom: var(--page-margin-lg)
-  margin-top: min(8vw, 55px)
 
 
 body
